<resources>
    <string name="app_name">BusinessConnect</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign up</string>
    <string name="reg">Register</string>
    <string name="sign_account">Sign in your account</string>
    <string name="create">Create your account</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="forgot">Forgot password?</string>
    <string name="no_account">Don’t have any account?</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="mainLogo">mainLogo</string>
    <string name="textLogo">textLogo</string>
    <string name="congrats">Congrats!</string>
    <string name="regSucces">Account Registered Successfully</string>
    <string name="great">Great!</string>
    <string name="profile">Профиль</string>
    <string name="task">Task</string>
    <string name="partners">Партнеры</string>
    <string name="documents">Документы</string>
    <string name="notification">Уведомления</string>
    <string name="settings">Настройки</string>
    <string name="report">Сообщить об ошибке</string>
</resources>