<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpAct"
    android:background="@color/background">

    <ImageView
        android:id="@+id/imgText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/logotext"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginHorizontal="0dp"
        android:contentDescription="@string/textLogo"/>

    <TextView
        android:id="@+id/signUpText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/imgText"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:fontFamily="@font/mulishbold"
        android:textSize="35sp"
        android:layout_marginHorizontal="30dp"/>

    <TextView
        android:id="@+id/signUpAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/signUpText"
        android:text="@string/create"
        android:textColor="@color/grey"
        android:fontFamily="@font/mulishregular"
        android:textSize="17sp"
        android:layout_marginHorizontal="30dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edUserLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/signUpAccount"
        android:layout_marginTop="35dp"
        android:layout_marginHorizontal="15dp"
        app:boxCornerRadiusBottomEnd="20dp"
        app:boxCornerRadiusBottomStart="20dp"
        app:boxCornerRadiusTopEnd="20dp"
        app:boxCornerRadiusTopStart="20dp"
        app:boxBackgroundColor="@color/edText_color"
        app:boxStrokeColor="@color/edText_color"
        app:boxStrokeErrorColor="@color/error"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edUserText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_name"
            app:boxStrokeColor="@color/edText_color"
            android:textColorHint="@color/grey"
            android:textColor="@color/grey"
            android:inputType="textPersonName"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edEmailLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="15dp"
        android:visibility="visible"
        app:boxBackgroundColor="@color/edText_color"
        app:boxCornerRadiusBottomEnd="20dp"
        app:boxCornerRadiusBottomStart="20dp"
        app:boxCornerRadiusTopEnd="20dp"
        app:boxCornerRadiusTopStart="20dp"
        app:boxStrokeColor="@color/edText_color"
        app:boxStrokeErrorColor="@color/error"
        app:layout_constraintTop_toBottomOf="@+id/edPasswordLayout"
        tools:layout_editor_absoluteX="15dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edEmailText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:textColor="@color/grey"
            android:textColorHint="@color/grey"
            android:visibility="visible"
            app:boxStrokeColor="@color/edText_color"
            android:inputType="textEmailAddress"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edPhoneLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="15dp"
        android:visibility="visible"
        app:boxBackgroundColor="@color/edText_color"
        app:boxCornerRadiusBottomEnd="20dp"
        app:boxCornerRadiusBottomStart="20dp"
        app:boxCornerRadiusTopEnd="20dp"
        app:boxCornerRadiusTopStart="20dp"
        app:boxStrokeColor="@color/edText_color"
        app:boxStrokeErrorColor="@color/error"
        app:layout_constraintTop_toBottomOf="@+id/edEmailLayout"
        tools:layout_editor_absoluteX="15dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edPhoneText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone"
            android:textColor="@color/grey"
            android:textColorHint="@color/grey"
            android:visibility="visible"
            app:boxStrokeColor="@color/edText_color"
            android:inputType="phone"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edPasswordLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="15dp"
        android:visibility="visible"
        app:boxBackgroundColor="@color/edText_color"
        app:boxCornerRadiusBottomEnd="20dp"
        app:boxCornerRadiusBottomStart="20dp"
        app:boxCornerRadiusTopEnd="20dp"
        app:boxCornerRadiusTopStart="20dp"
        app:boxStrokeColor="@color/edText_color"
        app:boxStrokeErrorColor="@color/error"
        app:layout_constraintTop_toBottomOf="@+id/edUserLayout"
        tools:layout_editor_absoluteX="15dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edPasswordText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:textColor="@color/grey"
            android:textColorHint="@color/grey"
            app:boxStrokeColor="@color/edText_color"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/signUpBt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="100dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/bottom_color"
        android:fontFamily="@font/mulishregular"
        android:gravity="center"
        android:onClick="onClickSplashReg"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/edPhoneLayout"
        tools:layout_editor_absoluteX="100dp" />
    

</androidx.constraintlayout.widget.ConstraintLayout>